--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "debug": "^4.0.1",
+    "ejs": "^2.6.1",
     "express": "^4.16.3",
     "morgan": "^1.9.1",
     "request": "^2.88.0"
