--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^6.0.0",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
+    "favicon": "0.0.2",
     "firebase": "^5.5.0",
     "morgan": "^1.9.1",
     "regression": "^2.0.1",
